force-app/main/default/objects/Payment_Terms_Master__c/Payment_Terms_Master__c.object-meta.xml
<CustomObject>
    <label>Payment Terms Master</label>
    <nameField>
        <displayFormat>PTM-{0000}</displayFormat>
        <label>Payment Terms Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Terms Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>