force-app/main/default/objects/Payment_Terms_Master__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>