force-app/main/default/objects/Payment_Terms_Master__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>