force-app/main/default/objects/Payment_Terms_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sub_Vertical__c</columns>
    <columns>Payment_Term__c</columns>
    <columns>Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>